--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -37,8 +37,9 @@
   <body>
     <div id="page-create-orphanage">
       <aside class="animate-right">
-        <img src="./public/images/map-marker.svg" alt="Happy" />
-
+        <a href="orphanages.html">
+          <img src="./public/images/map-marker.svg" alt="Happy" />
+        </a>
         <footer>
           <button onclick="history.back()">
             <img src="./public/images/arrow-back.svg" alt="Voltar" />
