--- a/orphanages.html
+++ b/orphanages.html
@@ -34,7 +34,9 @@
     <div id="page-orphanages">
       <aside class="animate-right">
         <header>
-          <img src="./public/images/map-marker.svg" alt="Happy" />
+          <a href="index.html">
+            <img src="./public/images/map-marker.svg" alt="Happy" />
+          </a>
 
           <h2>Escolha uma casa de acolhida no mapa</h2>
 
